fix bots collapse summary bottom border

--- a/packages/client-core/src/admin/styles/admin.module.scss
+++ b/packages/client-core/src/admin/styles/admin.module.scss
@@ -170,7 +170,7 @@
 
 .summary {
   background: var(--purpleColor4);
-  border-bottom: 1px solid #23282c;
+  border-bottom: 1px solid var(--purpleDarkest);
   color: #f1f1f1;
   border-radius: 0;
 
